--- a/intro/intro.css
+++ b/intro/intro.css
@@ -305,8 +305,8 @@ footer .container
 }
 footer .container .sec
 {
-	margin-right: 30px;
-	margin-left: 20px;
+	margin-right: 3%;
+	margin-left: 3%;
 }
 footer .container .sec.abountus
 {
