--- a/intro/intro.css
+++ b/intro/intro.css
@@ -305,8 +305,7 @@ footer .container
 }
 footer .container .sec
 {
-	margin-right: 3%;
-	margin-left: 3%;
+	margin-right: 30px;
 }
 footer .container .sec.abountus
 {
