--- a/intro/intro.css
+++ b/intro/intro.css
@@ -29,7 +29,7 @@ body {
 	background: linear-gradient(var(--background-lighter-color), var(--background-color));
 	text-align: center;
 	padding-top: 15vh;
-	height: 85vh;
+	height: 100%;
 	color: var(--highlight-text-color);
 	text-shadow: 0px 5px 5px #00000070;
 }
